--- a/styles/index.css
+++ b/styles/index.css
@@ -4,7 +4,7 @@
     margin: 0;
 }
 body{
-    background-color: #ebf2ff !important;
+    background-color: #dbeaf6 !important;
 }
 
 .add_new_btn_mobile_only
